add filtering to table
